--- a/beginner_tutorials/CMakeLists.txt
+++ b/beginner_tutorials/CMakeLists.txt
@@ -16,6 +16,8 @@ find_package(catkin REQUIRED COMPONENTS
   control_msgs
   trajectory_msgs
   visualization_msgs
+  Eigen3 REQUIRED
+  kdl_parser
 )
 
 ## System dependencies are found with CMake's conventions
@@ -57,7 +59,7 @@ find_package(catkin REQUIRED COMPONENTS
    Sensor_set_values.msg
    pid_effort_commands.msg
    rasm_arduino_commands.msg
-
+   rasm_settings.msg
  )
 
 ## Generate services in the 'srv' folder
@@ -126,6 +128,7 @@ catkin_package(
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -142,16 +145,22 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # For the first argument, I made it the name of the node
+add_executable(MyRobot_hardware_interface_joystick_node src/rasm_hardware_interface_joystick.cpp)
 add_executable(MyRobot_hardware_inerface_node src/rasm_hardware_interface.cpp)
 #add_executable(MyRobot_hardware_interface_node_v2 src/rasm_hardware_interface_v2.cpp)
 #add_executable(My_robot_trajectory_node src/trajectory_subscriber_test.cpp)
 add_executable(effort_command_compiler_node src/effort_command_compiler.cpp)
+add_executable(ik_node src/inverse_kinematics.cpp)
 #target_link_libraries(MyRobot_hardware_interface_node_v2 ${catkin_LIBRARIES})
 target_link_libraries(effort_command_compiler_node ${catkin_LIBRARIES})
 #target_link_libraries(My_robot_trajectory_node ${catkin_LIBRARIES})
 target_link_libraries(MyRobot_hardware_inerface_node ${catkin_LIBRARIES})
+target_link_libraries(MyRobot_hardware_interface_joystick_node ${catkin_LIBRARIES})
+target_link_libraries(ik_node ${catkin_LIBRARIES})
 #add_dependencies(MyRobot_hardware_interface_node_v2 beginner_tutorials_generate_messages_cpp)
 add_dependencies(MyRobot_hardware_inerface_node beginner_tutorials_generate_messages_cpp)
+add_dependencies(MyRobot_hardware_interface_joystick_node beginner_tutorials_generate_messages_cpp)
+add_dependencies(ik_node beginner_tutorials_generate_messages_cpp)
 #add_dependencies(My_robot_trajectory_node beginner_tutorials_generate_messages_cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
