--- a/rasm_moveit3/config/joint_limits.yaml
+++ b/rasm_moveit3/config/joint_limits.yaml
@@ -4,16 +4,16 @@
 joint_limits:
   link_e_3:
     has_velocity_limits: true
-    max_velocity: 0.25
+    max_velocity: 0.4
     has_acceleration_limits: true
-    max_acceleration: .25
+    max_acceleration: 0.4
   link_p_5:
     max_position: 0.785
     min_position: -2.13
     has_velocity_limits: true
-    max_velocity: 0.5
+    max_velocity: 0.15
     has_acceleration_limits: true
-    max_acceleration: 0.2
+    max_acceleration: 0.075
   link_r_6:
     max_position: 1.57
     min_position: -1.57
@@ -23,9 +23,9 @@ joint_limits:
     max_acceleration: 0.25
   link_s_2:
     has_velocity_limits: true
-    max_velocity: 0.25
+    max_velocity: 0.4
     has_acceleration_limits: true
-    max_acceleration: .25
+    max_acceleration: 0.4
   link_y_4:
     max_position: 2.53
     min_position: -2.53
@@ -34,9 +34,9 @@ joint_limits:
     has_acceleration_limits: true
     max_acceleration: 0.25
   link_z_1:
-    has_velocity_limits: true
+    has_velocity_limits: false
     max_velocity: 0.009
-    has_acceleration_limits:  true
+    has_acceleration_limits: false
     max_acceleration: 0.00025
     has_jerk_limits: false
     max_jerk: 5.0
