inverse_kinematics node added

--- a/beginner_tutorials/CMakeLists.txt
+++ b/beginner_tutorials/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  tf2
+  tf2_ros
   message_generation
   controller_manager
   control_msgs
@@ -150,17 +152,23 @@ add_executable(MyRobot_hardware_inerface_node src/rasm_hardware_interface.cpp)
 #add_executable(MyRobot_hardware_interface_node_v2 src/rasm_hardware_interface_v2.cpp)
 #add_executable(My_robot_trajectory_node src/trajectory_subscriber_test.cpp)
 add_executable(effort_command_compiler_node src/effort_command_compiler.cpp)
+add_executable(effort_command_compiler_ik_node src/effort_command_compiler_ik.cpp)
 add_executable(ik_node src/inverse_kinematics.cpp)
+add_executable(search_pose_node src/search_pose.cpp)
 #target_link_libraries(MyRobot_hardware_interface_node_v2 ${catkin_LIBRARIES})
 target_link_libraries(effort_command_compiler_node ${catkin_LIBRARIES})
+target_link_libraries(effort_command_compiler_ik_node ${catkin_LIBRARIES})
+target_link_libraries(effort_command_compiler_ik_node ${catkin_LIBRARIES})
 #target_link_libraries(My_robot_trajectory_node ${catkin_LIBRARIES})
 target_link_libraries(MyRobot_hardware_inerface_node ${catkin_LIBRARIES})
 target_link_libraries(MyRobot_hardware_interface_joystick_node ${catkin_LIBRARIES})
 target_link_libraries(ik_node ${catkin_LIBRARIES})
+target_link_libraries(search_pose_node ${catkin_LIBRARIES})
 #add_dependencies(MyRobot_hardware_interface_node_v2 beginner_tutorials_generate_messages_cpp)
 add_dependencies(MyRobot_hardware_inerface_node beginner_tutorials_generate_messages_cpp)
 add_dependencies(MyRobot_hardware_interface_joystick_node beginner_tutorials_generate_messages_cpp)
 add_dependencies(ik_node beginner_tutorials_generate_messages_cpp)
+add_dependencies(search_pose_node beginner_tutorials_generate_messages_cpp)
 #add_dependencies(My_robot_trajectory_node beginner_tutorials_generate_messages_cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
