--- a/rasm_moveit3/config/joint_limits.yaml
+++ b/rasm_moveit3/config/joint_limits.yaml
@@ -4,9 +4,9 @@
 joint_limits:
   link_e_3:
     has_velocity_limits: true
-    max_velocity: 0.5
+    max_velocity: 1.0
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 1.0
   link_p_5:
     max_position: 0.785
     min_position: -2.13
@@ -23,9 +23,11 @@ joint_limits:
     max_acceleration: 0.25
   link_s_2:
     has_velocity_limits: true
-    max_velocity: 0.5
+    max_velocity: 1.0
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 1.0
+    max_position: 3.1
+    min_position: -3.1
   link_y_4:
     max_position: 2.53
     min_position: -2.53
