--- a/rasm_moveit3/config/joint_limits.yaml
+++ b/rasm_moveit3/config/joint_limits.yaml
@@ -4,7 +4,7 @@
 joint_limits:
   link_e_3:
     has_velocity_limits: true
-    max_velocity: 1.0
+    max_velocity: 0.5
     has_acceleration_limits: true
     max_acceleration: 1.0
   link_p_5:
@@ -36,8 +36,8 @@ joint_limits:
     has_acceleration_limits: true
     max_acceleration: 0.25
   link_z_1:
-    has_velocity_limits: false
-    max_velocity: 0.009
+    has_velocity_limits: true
+    max_velocity: 0.03
     has_acceleration_limits: false
     max_acceleration: 0.00025
     has_jerk_limits: false
